--- a/src/styles/ProductDetails.css
+++ b/src/styles/ProductDetails.css
@@ -1,5 +1,5 @@
 .product-details-page-modern {
-    padding-top: calc(var(--nav-height) + 20px);
+    padding-top: calc(var(--nav-height) + 15px);
     padding-bottom: 100px;
 }
 
